수집기 코드 스타일 정리: Apache Commons 제거, toEntity 패턴 통일, SectorInvestorNetBuyCollector 리팩토링
- commons-lang3 StringUtils/ObjectUtils 의존성 제거
  - Strings 유틸 클래스 추가 (trimToEmpty, substringBefore)
  - ObjectUtils.isEmpty → null || isEmpty(), StringUtils.isBlank → null || isBlank()
  - StringUtils.trim → null-safe 삼항 처리
  - KiwoomValueParser, StockCode, DateParser, NumberParser, EscalationNotifier 적용
- 전 수집기 toEntity 패턴 통일 (루프 내 엔티티 생성 로직 분리)
  - IndexContributionRankingCollector: toMarketOverviewEntity / toSectorPriceEntity / toRankingEntity 이름 분리
- SectorInvestorNetBuyCollector 리팩토링
  - DateTimeFormatter static 상수 제거 → DateTimePattern enum 사용
  - StexType 지역변수 선언, existsBy 패턴 적용
  - InvestorType loop + switch(resolveNetBuy) 패턴으로 중복 제거
  - IllegalStateException → EscalateException(COMPOSITE_INDEX_ROW_NOT_FOUND)
- ProgramNetBuyRankingCollector 리팩토링
  - AmtQtyType 지역변수 선언, StexType 지역변수 선언
  - 빈 응답 guard + return 처리
- ErrorCode 메시지 수정: 종목 마스터 → 종목 기준정보, COMPOSITE_INDEX_ROW_NOT_FOUND 추가
- InvestorTradingSummarySnapshotRepository: findBy → existsBy 패턴 교체

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01G2J5oHimnsCFBEGSfdy6SF